# dum-cipher

./: Cargo.toml
examples/: no_authentication.rs  only_key_derivation.rs  separated_chunks.rs  shuffle_data.rs  use_authentication.rs
src/: authentication.rs  dum_encryption.rs  dum_file_encryptor.rs  encryption_options.rs  key_generation.rs  lib.rs  main.rs
