[package]
name = "dum-cipher"
version = "1.1.0"
edition = "2021"
authors = ["Rik de Goede <rik.dgd@gmail.com>"]
description = "DUM-cipher stands for: Don't Use Me - cipher. This is because you should never use this cipher!"

[dependencies]
sha2 = "0.10.8"
rand = "0.8.5"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
